# periscope

./: Cargo.toml  README.md  TODO.md  some.patch
src/: app.rs  cli.rs  diff.rs  github.rs  main.rs  ui.rs
src/diff/: build.rs  mod.rs  palette.rs  parse.rs  render.rs  search.rs
themes/: Enki-Tokyo-Night.tmTheme
