[package]
name = "periscope"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.0"
tokio = { version = "1.51.1", features = ["full"] }
