[package]
name = "periscope"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream", "use-dev-tty"] }
futures = "0.3.32"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2.1"
# default-fancy = bundled syntaxes/themes on a pure-Rust regex backend (no Oniguruma/C).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.51.1", features = ["full"] }
